--- a/style/contact.css
+++ b/style/contact.css
@@ -6,7 +6,7 @@ body {
 	background-color: #dddbdb;
 }
 h1 {
-	color: #f06e79;
+	color: #404040;
 	font-weight: bold;
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
 		'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -36,10 +36,10 @@ form {
 	width: 80%;
 }
 label {
-	color: #f06e79;
+	color: #404040;
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	font-weight: bold;
-	margin-bottom: 2px;
+	margin-bottom: 5px;
 }
 
 .form-control {
