--- a/style/project.css
+++ b/style/project.css
@@ -218,13 +218,12 @@ button:hover {
 	/* background-color: aqua; */
 }
 .blog-card-header img {
+	display: block;
 	border-radius: 10px;
-	/* border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px; */
 	width: 100%;
 	height: 80%;
 	background-color: gray;
-	object-fit: cover;
+	object-fit: fill;
 }
 
 .blog-card-title p {
