--- a/style/contact.css
+++ b/style/contact.css
@@ -14,25 +14,22 @@ h1 {
 
 .container {
 	padding: 2rem;
-	gap: 3rem;
+	gap: 1rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: start;
 	align-items: center;
 	width: 40vw;
 	height: auto;
-	background-color: #f7f4f4;
-	box-shadow: 0 15px 20px #00000017;
 	border-radius: 10px;
-	margin: 100px auto;
+	margin: 70px auto;
 }
 
 /* form */
 form {
 	display: flex;
 	flex-direction: column;
-	gap: 2rem;
-	/* background-color: red; */
+	gap: 1.2rem;
 	width: 80%;
 }
 label {
@@ -61,8 +58,7 @@ textarea {
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	height: 30px;
 	border-radius: 5px;
-	border: 1px solid gray;
-	background-color: #dfdfdf;
+	border: none;
 	box-shadow: 0 10px 10px #00000031;
 }
 .form-control input:focus,
@@ -75,12 +71,8 @@ textarea {
 	height: 100px;
 	overflow-y: scroll;
 }
-textarea::-webkit-scrollbar-thumb {
-	background-color: #693439;
-}
 textarea::-webkit-scrollbar {
-	width: 10px;
-	background-color: #b1a5a5;
+	display: none;
 }
 button {
 	align-self: flex-end;
