--- a/style/contact.css
+++ b/style/contact.css
@@ -97,6 +97,15 @@ button:hover {
 	transition: 300ms;
 }
 
+#error-message {
+	color: #e40f20;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.input-error {
+	border: 1px solid #e40f20 !important;
+}
+
 /* responsive */
 @media (max-width: 800px) {
 	.container {
